unpackaged/main/default/objects/Lead/fields/Inital_Notes__c.field-meta.xml
<CustomField>
    <fullName>Inital_Notes__c</fullName>
    <label>Inital Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>