unpackaged/main/default/objects/Lead/fields/Initial_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Name__c</fullName>
    <label>Initial Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>