unpackaged/main/default/objects/Lead/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Restoration Company</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Other Govt</fullName>
            </value>
            <value>
                <fullName>Multi Family Housing</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Former Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>