unpackaged/main/default/objects/Lead/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <description>Territory updated from Zip Code object, referenced in Lead assignment rule.</description>
    <inlineHelpText>Territory used to manage lead assignment.</inlineHelpText>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>