unpackaged/main/default/objects/Lead/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <businessProcess>Customer Type</businessProcess>
    <label>Business</label>
</RecordType>