unpackaged/main/default/objects/Lead/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <businessProcess>Customer Type</businessProcess>
    <label>Retail</label>
</RecordType>