unpackaged/main/default/objects/Lead/listViews/AL_Panhandle_Lead.listView-meta.xml
<ListView>
    <fullName>AL_Panhandle_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>AL Panhandle</label>
    <queue>AL_Panhandle</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>