unpackaged/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
    <fullName>AllOpenLeads</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>Inital_Notes__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory__c</field>
        <operation>contains</operation>
        <value>north</value>
    </filters>
    <label>All Open Leads</label>
</ListView>