unpackaged/main/default/objects/Lead/listViews/Bills_Leads.listView-meta.xml
<ListView>
    <fullName>Bills_Leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>Lead_Type__c</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LAST_TRANSFER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>bill</value>
    </filters>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Business</value>
    </filters>
    <label>Bills Leads</label>
</ListView>