unpackaged/main/default/objects/Lead/listViews/Connecticut_Leads.listView-meta.xml
<ListView>
    <fullName>Connecticut_Leads</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>Inital_Notes__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>ct</value>
    </filters>
    <label>Connecticut Leads</label>
</ListView>