unpackaged/main/default/objects/Lead/listViews/Craig_Bradford_MA_RI_NH.listView-meta.xml
<ListView>
    <fullName>Craig_Bradford_MA_RI_NH</fullName>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>Inital_Notes__c</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>ma,nh,.ri</value>
    </filters>
    <label>Craig Bradford - MA, RI, NH</label>
</ListView>