unpackaged/main/default/objects/Lead/listViews/craigs_leads.listView-meta.xml
<ListView>
    <fullName>craigs_leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>Lead_Type__c</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.LAST_TRANSFER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Craig</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/12/2024 12:00 AM</value>
    </filters>
    <label>craigs leads</label>
</ListView>