unpackaged/main/default/objects/Lead/listViews/FL_Panhandle_Lead.listView-meta.xml
<ListView>
    <fullName>FL_Panhandle_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>FL Panhandle</label>
    <queue>FL_Panhandle</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>