unpackaged/main/default/objects/Lead/listViews/Gradys_Leads.listView-meta.xml
<ListView>
    <fullName>Gradys_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_TRANSFER</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Business</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>grady</value>
    </filters>
    <label>Gradys Leads</label>
</ListView>