unpackaged/main/default/objects/Lead/listViews/Houston_Lead.listView-meta.xml
<ListView>
    <fullName>Houston_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Houston</label>
    <queue>Houston</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>