unpackaged/main/default/objects/Lead/listViews/Jacksonville_Lead.listView-meta.xml
<ListView>
    <fullName>Jacksonville_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Jacksonville</label>
    <queue>Jacksonville</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>