unpackaged/main/default/objects/Lead/listViews/Lower_CT_Lead.listView-meta.xml
<ListView>
    <fullName>Lower_CT_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lower CT</label>
    <queue>Lower_CT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>