unpackaged/main/default/objects/Lead/listViews/Marketing_Leads_for_C.listView-meta.xml
<ListView>
    <fullName>Marketing_Leads_for_C</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATE</field>
        <operation>equals</operation>
        <value>MA,RI</value>
    </filters>
    <label>Marketing Leads for Mass.</label>
</ListView>